# Insta-Repo

./: .dockerignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  README_ADVANCED.md  SECURITY.md  env.example  install.sh
.github/workflows/: codeql.yml  crates-publish.yml  release.yml  security-scan.yml
docs/: ARCHITECTURE.md  THREAT_MODEL.md
rules/: signatures.yaml  smart_contracts.yaml
scripts/: audit.sh  env_setup.sh  scan_with_ai.sh
src/: ai_analyzer.rs  cli.rs  ebpf_monitor.rs  error.rs  logger.rs  main.rs  reporter.rs  rules.rs  watcher.rs
tests/: integration_test.rs
tests/fixtures/: backdoor_contract.sol  hidden_miner.ps1  malicious_build.rs  malicious_npm.js  obfuscated_b64.txt  payload_stager.sh  wallet_drainer.js
