[package]
name = "insta-repo"
version = "0.2.0"
edition = "2021"
authors = ["credkellar-boop"]
description = "Heuristic and AI-driven repository scanner for hidden malware"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
regex = "1.10"
walkdir = "2.4"
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
dotenv = "0.15"
